Create Path, tag swagger
