# src/routes/index.ts
@@ -7,46 +7,6 @@ import YAML from "yamljs";
 const SwaggerYaml = YAML.load("swagger.yaml");
 const router = (app) => {
   /**
-   * @swagger
-   * components:
-   *  schemas:
-   *    Post:
-   *      type: object
-   *      required:
-   *          - title
-   *          - content
-   *          - author_id
-   *      properties:
-   *          title:
-   *              type: string
-   *              description: Title of post
-   *              example: This is title string
-   *          subcontent:
-   *              type: string
-   *              description: Sub content of post
-   *              example: This is sub-content string
-   *          content:
-   *              type: string
-   *              description: Full content of post
-   *              example: This is full content string
-   *          author_id:
-   *              type: string
-   *              example: 1
-   *    User:
-   *      type: object
-   *      properties:
-   *        username:
-   *            type: string
-   *            example: huutin123
-   *        password:
-   *            type: string
-   *            example: mypassword
-   *        name:
-   *            type: string
-   *            example: Huu Tin
-   */
-
-  /**
    * @openapi
    * /:
    *   get:
